==> xiaotianbc/STM32_MUSIC_Player/mcu_dev/mcu_uart.c <==
#include "stm32f4xx.h"
#include "stm32f4xx_usart.h"
#include "mcu_uart.h"
#include "wujique_log.h"
#define USARTx                           USART3
#define USARTx_CLK                       RCC_APB1Periph_USART3
#define USARTx_CLK_INIT                  RCC_APB1PeriphClockCmd
#define USARTx_IRQn                      USART3_IRQn
#define USARTx_IRQHandler                USART3_IRQHandler
#define USARTx_TX_PIN                    GPIO_Pin_10
#define USARTx_TX_GPIO_PORT              GPIOB
#define USARTx_TX_GPIO_CLK               RCC_AHB1Periph_GPIOB
#define USARTx_TX_SOURCE                 GPIO_PinSource10
#define USARTx_TX_AF                     GPIO_AF_USART3
#define USARTx_RX_PIN                    GPIO_Pin_11
#define USARTx_RX_GPIO_PORT              GPIOB
#define USARTx_RX_GPIO_CLK               RCC_AHB1Periph_GPIOB
#define USARTx_RX_SOURCE                 GPIO_PinSource11
#define USARTx_RX_AF                     GPIO_AF_USART3
#define USARTx_DR_ADDRESS                ((uint32_t)USART3 + 0x04)
#define USARTx_DMA                       DMA1
#define USARTx_DMAx_CLK                  RCC_AHB1Periph_DMA1
#define USARTx_TX_DMA_CHANNEL            DMA_Channel_4
#define USARTx_TX_DMA_STREAM             DMA1_Stream3
#define USARTx_TX_DMA_FLAG_FEIF          DMA_FLAG_FEIF3
#define USARTx_TX_DMA_FLAG_DMEIF         DMA_FLAG_DMEIF3
#define USARTx_TX_DMA_FLAG_TEIF          DMA_FLAG_TEIF3
#define USARTx_TX_DMA_FLAG_HTIF          DMA_FLAG_HTIF3

int32_t mcu_uart_open(int32_t comport) {
    GPIO_InitTypeDef GPIO_InitStructure = {0};
    USART_InitTypeDef USART_InitStructure = {0};
    NVIC_InitTypeDef NVIC_InitStructure = {0};
    DMA_InitTypeDef DMA_InitStructure = {0};

    UartHead3 = 0;
    UartEnd3 = 0;

    // 打开GPIO时钟
    RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);
    // 打开串口时钟
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, ENABLE);
    //GPIOB10 复用为 USART3
    GPIO_PinAFConfig(GPIOB, GPIO_PinSource10, GPIO_AF_USART3);
    //GPIOB11 复用为 USART3
    GPIO_PinAFConfig(GPIOB, GPIO_PinSource11, GPIO_AF_USART3);

    // TXD ---- PB10
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;        //复用
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;      //推挽复用输出
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;        //上拉
    GPIO_Init(GPIOB, &GPIO_InitStructure);
    // RXD ---- PB11
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;        //复用
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;      //推挽复用输出
    GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;        //上拉
    GPIO_Init(GPIOB, &GPIO_InitStructure);

    //USART 初始化设置
    USART_InitStructure.USART_BaudRate = 2000000;//波特率;
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;//字长为 8 位
    USART_InitStructure.USART_StopBits = USART_StopBits_1;//一个停止位
    USART_InitStructure.USART_Parity = USART_Parity_No;//无奇偶校验位
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;//无硬件数据流控制
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;//收发
    USART_Init(USART3, &USART_InitStructure); //初始化串口
    USART_Cmd(USART3, ENABLE); //使能串口
    USART_ClearFlag(USART3, USART_FLAG_TC);//清中断标志

    USART_ITConfig(USART3, USART_IT_RXNE, ENABLE);//开启中断
    //Usart3 NVIC 配置，主要是配置中断优先级
    NVIC_InitStructure.NVIC_IRQChannel = USART3_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 5;//抢占优先级 3
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 3; //响应优先级 3
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; //使能中断
    NVIC_Init(&NVIC_InitStructure); //执行NVIC配置

    return (0);
}

int32_t mcu_uart_close(int32_t comport) {

    UartHead3 = 0;
    UartEnd3 = 0;
    //根据硬件决定是否要重新配置IO口。
    USART_Cmd(USART3, DISABLE);
    RCC_APB1PeriphClockCmd(RCC_APB1Periph_USART3, DISABLE);

    return (0);
}

int32_t mcu_uart_tcflush(int32_t comport) {
    UartHead3 = UartEnd3;

    return 0;
}

int32_t
mcu_uart_set_baud(int32_t comport, int32_t baud, int32_t databits, int32_t parity, int32_t stopbits, int32_t flowctl) {
    USART_InitTypeDef USART_InitStructure;

    if (mcu_uart_open(comport) == -1) return (-1);

    // 关闭串口
    USART_Cmd(USART3, DISABLE);
    USART_InitStructure.USART_BaudRate = baud;
    USART_InitStructure.USART_WordLength = USART_WordLength_8b;
    USART_InitStructure.USART_StopBits = USART_StopBits_1;
    USART_InitStructure.USART_Parity = USART_Parity_No;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_Init(USART3, &USART_InitStructure);
    // 打开串口
    mcu_uart_tcflush(comport);
    USART_Cmd(USART3, ENABLE);

    return 0;
}

int32_t mcu_uart_read(int32_t comport, uint8_t *buf, int32_t len) {
    int32_t i;

    if (len <= 0) return (-1);
    if (buf == NULL) return (-1);

    i = 0;

    //uart_printf("rec index:%d, %d\r\n", UartHead3, rec_end3);
    while (UartHead3 != UartEnd3) {
        *buf = UartBuf3[UartHead3++];
        if (UartHead3 >= RX3_TEMP_BUF_LEN_MAX)
            UartHead3 = 0;

        buf++;
        i++;
        if (i >= len) {
            break;
        }
    }
    return (i);
}

int32_t mcu_uart_write(int32_t comport, uint8_t *buf, int32_t len) {
    u32 t;
    u16 ch;

    if (len <= 0)
        return (-1);

    if (buf == NULL)
        return (-1);

    while (len != 0) {
        t = 0;
        // 等待串口发送完毕
        while (USART_GetFlagStatus(USART3, USART_FLAG_TXE) == RESET) {
            if (t++ >= 0x1000000)//超时
                return (-1);
        }
        ch = (u16) (*buf & 0xff);
        USART_SendData(USART3, ch);
        buf++;
        len--;
    }

    return (0);
}
